--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -25,7 +25,7 @@
     </div>
 </main>
 
-<!--<div th:replace="fragments :: footer"></div>-->
+<div th:replace="fragments/fragments :: footer"></div>
 </body>
 </html>
 
