--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Checkout Page</title>
-    <head th:replace="fragments/>fragments :: head"></head>
+    <head th:replace="fragments/fragments :: head"></head>
 </head>
 <body>
 <div th:replace="fragments/fragments :: navbar"></div>
