--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <head th:replace="fragments :: head"></head>
 </head>
 <body>
+<div th:replace="fragments :: navbar" ></div>
 
+    <h3 th:if="${error}" th:text="$error}" style="color: red;"></h3>
+    <div th:unless="${error}">
+        <h3 style = "color: green;">Success!</h3>
+        <div>Id.: <span th:text="${id}" /></div>
+        <div>Status: <span th:text="${status}" /></div>
+        <div>Charge id.: <span th:text="${chargeId}" /></div>
+        <div>Balance transaction id.: <span th:text="${balance_transaction}" /> </div>
+    </div>
+<a href="/checkout.html">Checkout again</a>
+
+
+
+<footer th:replace="fragments :: footer"></footer>
 </body>
 </html>
